src/test/ui/parser/keyword-mod-as-identifier.stderr
error: expected pattern, found keyword `mod`
  --> $DIR/keyword-mod-as-identifier.rs:4:9
   |
LL |     let mod = "foo"; //~ error: expected pattern, found keyword `mod`
   |         ^^^ expected pattern

error: aborting due to previous error

