src/test/ui/parser/keyword-mod-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py mod'

fn main() {
    let mod = "foo"; //~ error: expected pattern, found keyword `mod`
}
